--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazy-load": "^3.0.13",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "save": "^2.4.0"
